Correction contraste

--- a/new/style.css
+++ b/new/style.css
@@ -720,7 +720,7 @@ h3 {
 }
 
 h1 {
-    color: #333333!important;
+    color: #000000!important;
 }
 
 h4 {
